chore(customer-service): add JVM arg to spring-boot:run and helper script to silence JDK native-access warning